# new-plex-dubs

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  pyrightconfig.json  requirements.txt
.github/: dependabot.yml
.github/workflows/: docker-publish.yml
src/: config.py  logger.py  radarr.py  shared.py  sonarr.py
