[project]
name = "plex-dubs"
version = "1.0.0"
description = "Automated Plex collection manager for dubbed anime"
requires-python = ">=3.11"
readme = "README.md"
authors = [
    {name = "Heavybullets8"},
]
keywords = ["plex", "anime", "dubbed", "webhook", "automation"]

[project.optional-dependencies]
dev = [
    "mypy==1.19.0",
    "types-requests",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "plexapi.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rapidfuzz.*"
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
